<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0">

  <groupId>io.github.danieltuerk</groupId>
  <version>0.7-SNAPSHOT</version>

  <modelVersion>4.0.0</modelVersion>
  <artifactId>selectrix4java</artifactId>
  <name>Selectrix4Java</name>
  <description>Java library to communicate with a selectrix bus system.</description>
  <url>https://github.com/DanielTuerk/selectrix4java</url>
  <packaging>jar</packaging>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>dtuerk</id>
      <name>Daniel Türk</name>
      <email>dtuerk22@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/DanielTuerk/selectrix4java.git</connection>
    <developerConnection>scm:git:https://github.com/DanielTuerk/selectrix4java.git</developerConnection>
    <url>https://github.com/DanielTuerk/selectrix4java</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

      <java.version>25</java.version>
  </properties>


  <build>

    <plugins>
      <!-- COMPILING -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>${java.version}</release>
          <debug>true</debug>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.17</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit47</artifactId>
            <version>2.17</version>
          </dependency>
        </dependencies>
      </plugin>

        <!-- runs on every build so broken Javadoc (e.g. invalid @link tags) fails CI instead of only surfacing during a release -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.6.3</version>
            <executions>
                <execution>
                    <id>attach-javadocs</id>
                    <goals>
                        <goal>jar</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
    </plugins>

  </build>

  <dependencies>
    <!-- Logging - Only SLF4J API, implementation provided by consumer -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.13</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <!-- Player/Recorder -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.13.2</version>
    </dependency>

    <!-- compile-time only: hosted Feature/RuntimeForeignAccess API used to register FFM downcalls
         for native-image ahead of time (see ffm.nativeimage.SerialFfmFeature) -->
    <dependency>
      <groupId>org.graalvm.sdk</groupId>
      <artifactId>nativeimage</artifactId>
      <version>25.0.4</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>

  <!-- used by the snapshot-publish workflow to deploy master-branch SNAPSHOT builds;
       Maven Central releases go through the "release" profile's central-publishing-maven-plugin instead -->
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/DanielTuerk/selectrix4java</url>
    </repository>
  </distributionManagement>

  <profiles>

    <profile>
      <id>standalone</id>
      <dependencies>
          <!-- Logback for Standalone-Execution -->
        <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
          <version>1.5.13</version>
        </dependency>
      </dependencies>
    </profile>

    <!-- activate with -Prelease when deploying to Maven Central -->
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.7</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.11.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>false</autoPublish>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>

</project>
